--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,37 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
-requests==2.31.0
-redis==5.0.4
+annotated-types==0.6.0
+bitarray==2.9.2
+blinker==1.8.2
+canonicaljson==2.0.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+cytoolz==0.12.3
+eth-account==0.10.0
+eth-hash==0.7.0
+eth-keyfile==0.8.1
+eth-keys==0.5.1
+eth-rlp==1.0.1
+eth-typing==4.2.3
+eth-utils==4.1.1
+eth_abi==5.0.1
 farcaster==0.7.11
+Flask==3.0.3
+hexbytes==0.3.1
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+parsimonious==0.9.0
+pycryptodome==3.20.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pyhumps==3.8.0
 python-dotenv==1.0.1
+redis==5.0.4
+regex==2024.5.10
+requests==2.31.0
+rlp==4.0.1
+toolz==0.12.1
+typing_extensions==4.11.0
+urllib3==2.2.1
+Werkzeug==3.0.3
